syntax = "proto3";

package randomPackage;

service Random {
    rpc PingPong(PingRequest) returns (PongResponse) {}
    rpc RandomNumbers(NumberRequest) returns (stream NumberResponse) {}
    rpc TodoList (stream ToDoRequest) returns (ToDoResponse) {}
}

message PingRequest {
    string message = 1;
}

message PongResponse {
    string message = 1;
}

message NumberRequest {
    int32 maxVal = 1;
}

message NumberResponse {
    int32 num = 1;
}

message ToDoRequest {
    string todo = 1;
    string status = 2;
}

message ToDoResponse {
    repeated ToDoRequest todos = 1;
}