// Original file: proto/random.proto

import type { ToDoRequest as _randomPackage_ToDoRequest, ToDoRequest__Output as _randomPackage_ToDoRequest__Output } from '../randomPackage/ToDoRequest';

export interface ToDoResponse {
  'todos'?: (_randomPackage_ToDoRequest)[];
}

export interface ToDoResponse__Output {
  'todos'?: (_randomPackage_ToDoRequest__Output)[];
}
